adding some documentation to shallow water projection operators

--- a/apps/1d/advection/sq_wave/Makefile
+++ b/apps/1d/advection/sq_wave/Makefile
@@ -9,7 +9,7 @@ include $(FINESS)/lib/1d/Makefile.defs
 #
 # DogSolveUser           = DogSolveUser
 ConSoln                 = ConSoln
-WenoReconstruct         = WenoReconstruct
+#WenoReconstruct         = WenoReconstruct
 ConstructIntegratedF    = ConstructIntegratedF
 
 ## ------------------------------------------------------------------------- ##
