--- a/apps/2d/shallow_water/riemann_test/Makefile
+++ b/apps/2d/shallow_water/riemann_test/Makefile
@@ -1,14 +1,14 @@
-
 ### definitions ###
 
 # default/library definitions
 include $(FINESS)/lib/2d/Makefile.defs
 
+# Default (application level) definintions
+include $(FINESS)/apps/2d/shallow_water/lib/Makefile.defs
+
 # overridden library objects
 #
 #Output               = Output
-DFluxFunc             = DFluxFunc
-D2FluxFunc            = D2FluxFunc
 
 # place to add object modules
 #
