--- a/apps/2d/euler/shock_diffraction/Makefile
+++ b/apps/2d/euler/shock_diffraction/Makefile
@@ -3,31 +3,23 @@
 # default/library definitions
 include $(FINESS)/lib/2d/Makefile.defs
 
-### overridden library objects ###
+# Default (application level) definintions
+include $(FINESS)/apps/2d/euler/lib/Makefile.defs
 
-# For saving 'eulerhelp.dat', which contains gamma gas constant
-AfterQinit          = AfterQinit
-
-# Used to call EulerParams (saves gamma gas constant)
-InitApp             = InitApp
-
-# Lax-Wendroff routines
-DFluxFunc           = DFluxFunc
-D2FluxFunc          = D2FluxFunc
+# overridden library objects
+#
+InitApp      = InitApp
 
 # Used to replace values inside wedge with (constant) initial conditions
 AfterFullTimeStep   = AfterFullTimeStep
-
-# Routines needed to be overwritten in order to implement the correct boundary
-# conditions.  For this problem, we need two SetBndValues functions: one for
-# x-direction, and one for y-direction
-# ConstructL          = ConstructL
 
 ALL_OBJECTS = $(COMMON_OBJECTS) \
 EulerParams.o \
 
 ALL_SOURCES = $(COMMON_SOURCES) \
 EulerParams.cpp \
+
+TOPLIB_INCLUDE = -I$(TOPLIB) -I$(FINESS)/apps/2d/euler/lib/ $(LIB_SYS_INCLUDE)
 
 ### targets ###
 
