--- a/apps/2d/euler/test_exact/Makefile
+++ b/apps/2d/euler/test_exact/Makefile
@@ -3,18 +3,20 @@
 # default/library definitions
 include $(FINESS)/lib/2d/Makefile.defs
 
+# Default (application level) definintions
+include $(FINESS)/apps/2d/euler/lib/Makefile.defs
+
 # overridden library objects
 #
-#AfterQinit  =  AfterQinit
 InitApp      = InitApp
-DFluxFunc    = DFluxFunc
-D2FluxFunc   = D2FluxFunc
 
 ALL_OBJECTS = $(COMMON_OBJECTS) \
 EulerParams.o \
 
 ALL_SOURCES = $(COMMON_SOURCES) \
 EulerParams.cpp \
+
+TOPLIB_INCLUDE = -I$(TOPLIB) -I$(FINESS)/apps/2d/euler/lib/ $(LIB_SYS_INCLUDE)
 
 ### targets ###
 
