--- a/apps/2d/euler/mach_reflection/Makefile
+++ b/apps/2d/euler/mach_reflection/Makefile
@@ -10,11 +10,9 @@ include $(FINESS)/apps/2d/euler/lib/Makefile.defs
 #
 InitApp      = InitApp
 
-ALL_OBJECTS = $(COMMON_OBJECTS) \
-EulerParams.o \
+ALL_OBJECTS = $(COMMON_OBJECTS) $(APP_LIB_OBJECTS)
 
-ALL_SOURCES = $(COMMON_SOURCES) \
-EulerParams.cpp \
+ALL_SOURCES = $(COMMON_SOURCES) $(APP_LIB_SOURCES)
 
 TOPLIB_INCLUDE = -I$(TOPLIB) -I$(FINESS)/apps/2d/euler/lib/ $(LIB_SYS_INCLUDE)
 
