--- a/apps/2d/euler/shock_diffraction/Makefile
+++ b/apps/2d/euler/shock_diffraction/Makefile
@@ -13,11 +13,13 @@ InitApp      = InitApp
 # Used to replace values inside wedge with (constant) initial conditions
 AfterFullTimeStep   = AfterFullTimeStep
 
-ALL_OBJECTS = $(COMMON_OBJECTS) \
-EulerParams.o \
+# place to add object modules
+#
+ALL_OBJECTS = $(COMMON_OBJECTS) $(APP_LIB_OBJECTS) \
+#EulerParams.o \
 
-ALL_SOURCES = $(COMMON_SOURCES) \
-EulerParams.cpp \
+ALL_SOURCES = $(COMMON_SOURCES) $(APP_LIB_SOURCES) \
+#EulerParams.cpp \
 
 TOPLIB_INCLUDE = -I$(TOPLIB) -I$(FINESS)/apps/2d/euler/lib/ $(LIB_SYS_INCLUDE)
 
