--- a/apps/2d/euler/wind_tunnel_w_step/Makefile
+++ b/apps/2d/euler/wind_tunnel_w_step/Makefile
@@ -18,11 +18,13 @@ AfterFullTimeStep   = AfterFullTimeStep
 # x-direction, and one for y-direction
 ConstructL          = ConstructL
 
-ALL_OBJECTS = $(COMMON_OBJECTS) \
-EulerParams.o \
+# place to add object modules
+#
+ALL_OBJECTS = $(COMMON_OBJECTS) $(APP_LIB_OBJECTS) \
+#EulerParams.o \
 
-ALL_SOURCES = $(COMMON_SOURCES) \
-EulerParams.cpp \
+ALL_SOURCES = $(COMMON_SOURCES) $(APP_LIB_SOURCES) \
+#EulerParams.cpp \
 
 TOPLIB_INCLUDE = -I$(TOPLIB) -I$(FINESS)/apps/2d/euler/lib/ $(LIB_SYS_INCLUDE)
 
