adding a new dogParams_defaults.ini

--- a/config/dogParams_defaults.ini
+++ b/config/dogParams_defaults.ini
@@ -31,4 +31,4 @@ nout_per_restart = 1
 num_subintervals = -1 ; # subintervals per frame to write report (neg = always)
 use_divfree = 0   ; (1-yes, 0-no)
 withPyClawPlotting = 0; (1-yes, 0-no)
-ic_quad_order = -100; order of quadrature for L2-projection of initial conditions
+global_alpha = 0  ; Flag to determine whether or not to use a global alpha
