--- a/lib/Makefile.defs
+++ b/lib/Makefile.defs
@@ -12,11 +12,13 @@ LFLAGS = $(HDF5_LIBRARIES)
 TOPLIB_INCLUDE = -I$(TOPLIB) $(LIB_SYS_INCLUDE)
 #
 
+MAIN_GLOBAL     = $(TOPLIB)/main_global
 RunStartScript  = $(TOPLIB)/RunStartScript
 WenoReconstruct = $(TOPLIB)/WenoReconstruct
 
 TOPLIB_OBJECTS = \
   $(LIB_SYS_OBJECTS) \
+  $(MAIN_GLOBAL).o \
   $(TOPLIB)/dog_ini.o \
   $(TOPLIB)/DogParams.o \
   $(TOPLIB)/OutputDir.o \
@@ -31,6 +33,7 @@ TOPLIB_OBJECTS = \
 TOPLIB_SOURCES = \
   $(LIB_SYS_SOURCES) \
   $(TOPLIB)/*.h \
+  $(MAIN_GLOBAL).cpp \
   $(TOPLIB)/dog_ini.cpp \
   $(TOPLIB)/DogParams.cpp \
   $(TOPLIB)/OutputDir.cpp \
