More work on 3D code and deleting dimdefs.h.
* Removing dimdefs.h from top level library.  This was previously overwritten in
* the 1- and 2-D libraries, but at the end of the day, I'm not confident only
* one of these gets chosen.

* Adding in a first pass at constructing the third-component of the flux
* function in ConstructL.  We still need to perform a convergence study on this.

--- a/apps/3d/advection/smooth_example/parameters.ini
+++ b/apps/3d/advection/smooth_example/parameters.ini
@@ -29,11 +29,14 @@ datafmt     = 1   ; 1 for ascii, 5 for hdf5.
 [grid]
 mx    =  30      ; number of grid elements in x-direction
 my    =  30      ; number of grid elements in y-direction
+mz    =  30      ; number of grid elements in y-direction
 mbc   =   6      ; number of ghost cells on each boundary
 xlow  =   0.0e0  ; left end point
 xhigh =   1.0e0  ; right end point
 ylow  =   0.0e0  ; lower end point
 yhigh =   1.0e0  ; upper end point
+zlow  =   0.0e0  ; lower end point
+zhigh =   1.0e0  ; upper end point
 
 ; -------------------------------------------------
 ;   WENO values
