Adding new experimental RK method based on PIF.
* Major file is located in lib/1d/FinSolveRK_PIF as a DogSolveUser option.
* Currently only implemented for 1d advection, and 1d Euler (for the
shock_entropy) problem.

Will work on including this with primary options in the near future.

--- a/apps/1d/advection/smooth_example/Makefile
+++ b/apps/1d/advection/smooth_example/Makefile
@@ -10,9 +10,9 @@ include $(FINESS)/apps/1d/advection/lib/Makefile.defs
 #
 # overridden library objects
 #
-# DogSolveUser           = DogSolveUser
-ConstructIntegratedF    = ConstructIntegratedF
-ConSoln                 = ConSoln
+DogSolveUser           = $(FINESS)/lib/1d/FinSolveRK_PIF
+ConstructIntegratedF   = ConstructIntegratedF
+ConSoln                = ConSoln
 
 # place to add object modules
 #
