--- a/apps/1d/euler/shock_entropy/parameters.ini
+++ b/apps/1d/euler/shock_entropy/parameters.ini
@@ -2,18 +2,18 @@
 [dogParams]
 defaults_file = "$FINESS/config/dogParams_defaults.ini"
 ndims       = 1         ; 1, 2, or 3
-nout        = 1         ; number of output times to print results
+nout        = 20        ; number of output times to print results
 tfinal      = 1.8       ; final time
 dtv(1)      = 0.0005    ; initial dt
 dtv(2)      = 1.0e10    ; max allowable dt 
 cflv(1)     = 0.500     ; max allowable Courant number 1/(2k-1)
-cflv(2)     = 0.400     ; desired Courant number
+cflv(2)     = 0.200     ; desired Courant number
 nv          = 500000    ; max number of time steps per call to DogSolve
-time_stepping_method = Lax-Wendroff ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
 ;time_stepping_method = Runge-Kutta ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
+time_stepping_method = User-Defined ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
 limiter_method = moment ; (e.g., moment, viscosity)
 space_order = 5  ; =method(1)= order of accuracy in space
-time_order  = 3  ; =method(2)= order of accuracy in time
+time_order  = 4  ; =method(2)= order of accuracy in time
 use_limiter = 1  ; =method(3)= use limiter (1-yes, 0-no)
 verbosity   = 1  ; =method(4)= verbosity of output
 mcapa       = 0  ; =method(5)= mcapa (capacity function index in aux arrays)
