--- a/apps/2d/euler/test_exact2/Makefile
+++ b/apps/2d/euler/test_exact2/Makefile
@@ -8,14 +8,16 @@ include $(FINESS)/apps/2d/euler/lib/Makefile.defs
 
 # overridden library objects
 #
-InitApp     = InitApp
-#EulerParams = EulerParams
+InitApp         = InitApp
+SetWaveSpd      = SetWaveSpd
 
 # place to add object modules
 #
 ALL_OBJECTS = $(COMMON_OBJECTS) $(APP_LIB_OBJECTS) \
+#EulerParams.o \
 
 ALL_SOURCES = $(COMMON_SOURCES) $(APP_LIB_SOURCES) \
+#EulerParams.cpp \
 
 TOPLIB_INCLUDE = -I$(TOPLIB) -I$(FINESS)/apps/2d/euler/lib/ $(LIB_SYS_INCLUDE)
 
