--- a/apps/1d/advection/smooth_example/parameters.ini
+++ b/apps/1d/advection/smooth_example/parameters.ini
@@ -10,8 +10,7 @@ dtv(2)      = 1.0e4      ; max allowable dt
 cflv(1)     = 0.44       ; max allowable Courant number
 cflv(2)     = 0.40       ; desired Courant number
 nv          = 500000     ; max number of time steps per call to DogSolve
-;time_stepping_method = Runge-Kutta ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
-time_stepping_method = Lax-Wendroff ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
+time_stepping_method = Runge-Kutta ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
 limiter_method = moment ; (e.g., moment, viscosity)
 space_order = 5   ; =method(1)= order of accuracy in space
 time_order  = 3   ; =method(2)= order of accuracy in time
@@ -28,11 +27,11 @@ withPyClawPlotting = 0; (1-yes, 0-no)
 
 [grid]
 mx    = 100   ; number of grid elements in x-direction
-mbc   = 5     ; number of ghost cells on each boundary
+mbc   = 3     ; number of ghost cells on each boundary
 xlow  = 0.0e0 ; left end point
 xhigh = 1.0e0 ; right end point
 
 [weno]
 weno_version  = JS     ; type of WENO reconstruction (e.g. JS, FD, Z)
 epsilon       = 1e-29  ; regulization parameter  ( epsilon > 0.0        )
-alpha_scaling = 1.0    ; scaling parameter       ( alpha_scaling >= 1.0 )
+alpha_scaling = 1.1    ; scaling parameter       ( alpha_scaling >= 1.0 )
