Cleaning up a number of applications

--- a/apps/1d/advection/smooth_example/parameters.ini
+++ b/apps/1d/advection/smooth_example/parameters.ini
@@ -1,4 +1,4 @@
-; Parameters common to dogpack applications
+; Parameters common to FINESS applications
 [dogParams]
 defaults_file = "$FINESS/config/dogParams_defaults.ini"
 ndims       = 1          ; 1, 2, or 3
@@ -34,4 +34,4 @@ xhigh = 1.0e0 ; right end point
 [weno]
 weno_version  = JS     ; type of WENO reconstruction (e.g. JS, FD, Z)
 epsilon       = 1e-29  ; regulization parameter  ( epsilon > 0.0        )
-alpha_scaling = 1.1    ; scaling parameter       ( alpha_scaling >= 1.0 )
+alpha_scaling = 1.0    ; scaling parameter       ( alpha_scaling >= 1.0 )
