--- a/apps/2d/euler/shock_diffraction/parameters.ini
+++ b/apps/2d/euler/shock_diffraction/parameters.ini
@@ -9,10 +9,11 @@ tfinal      = 2.3       ; final time
 ;tfinal      = 0.001     ; final time
 dtv(1)      = 0.00001   ; initial dt
 dtv(2)      = 1.0e10    ; max allowable dt 
-cflv(1)     = 0.60      ; max allowable Courant number 1/(2k-1)
-cflv(2)     = 0.50      ; desired Courant number
+cflv(1)     = 0.40      ; max allowable Courant number 1/(2k-1)
+cflv(2)     = 0.30      ; desired Courant number
 nv          = 500000    ; max number of time steps per call to DogSolve
 time_stepping_method = Runge-Kutta ; (e.g., Runge-Kutta, Lax-Wendroff)
+;time_stepping_method = Lax-Wendroff ; (e.g., Runge-Kutta, Lax-Wendroff)
 space_order = 5  ; =method(1)= order of accuracy in space
 time_order  = 3  ; =method(2)= order of accuracy in time
 use_limiter = 1  ; =method(3)= use limiter (0: no, >=1: yes)
@@ -34,7 +35,7 @@ ic_quad_order = 20  ; order of quadrature for L2-projection of initial condition
 ;my    = 880     ; number of grid elements in y-direction
 mx    = 390     ; number of grid elements in x-direction
 my    = 330     ; number of grid elements in y-direction
-mbc   = 3       ; number of ghost cells on each boundary
+mbc   = 5       ; number of ghost cells on each boundary
 xlow  =  0.0e0  ; left end point
 xhigh = 13.0e0  ; right end point
 ylow  =  0.0e0  ; lower end point
