2D PIF-RK example

--- a/apps/2d/advection/smooth_example/Makefile
+++ b/apps/2d/advection/smooth_example/Makefile
@@ -11,7 +11,8 @@ include $(FINESS)/apps/2d/advection/lib/Makefile.defs
 ## ------------------------------------------------------------------------- ##
 # overridden library objects
 #
-AuxFunc         = AuxFunc
+AuxFunc                 = AuxFunc
+DogSolveUser            = $(FINESS)/lib/2d/FinSolveRK_PIF
 ## ------------------------------------------------------------------------- ##
 
 ALL_OBJECTS = \
