Switch on OpenMP

--- a/config/Makefile.config
+++ b/config/Makefile.config
@@ -37,8 +37,8 @@ USE_H5CPP = 0
 # serial code with debugging options (this runs slow!)
 # LINK = time g++ -ggdb -DCHECK_BOUNDS
 
-LINK = time g++ -O4
-#LINK = time g++ -O4 -fopenmp -lgomp
+#LINK = time g++ -O4
+LINK = time g++ -O4 -fopenmp -lgomp
 
 #LINK = time g++-4.7 -ggdb
 
