Add -I. to include flag.

--- a/apps/2d/mhd/rotated_shock_tube/Makefile
+++ b/apps/2d/mhd/rotated_shock_tube/Makefile
@@ -20,6 +20,8 @@ InitialParams.cpp
  
 TOPLIB_INCLUDE = -I$(TOPLIB) -I$(FINESS)/apps/2d/mhd/lib/ $(LIB_SYS_INCLUDE)
 
+
+LOCAL_INCLUDE+=-I.
 ### targets ###
 
 include $(FINESS)/lib/2d/Makefile.targets
