First step to inject new code to build system.
- Add a Python script that is closer to actual application
- Add targets to Makefile so that compiler checks the syntactic
  correctness of generated file.

--- a/apps/2d/mhd/rotated_shock_tube/Makefile
+++ b/apps/2d/mhd/rotated_shock_tube/Makefile
@@ -8,22 +8,35 @@ include $(FINESS)/apps/2d/mhd/lib/Makefile.defs
 
 # overridden library objects
 #
-InitApp      = InitApp
+#InitApp      = InitApp
 
 ALL_OBJECTS = $(COMMON_OBJECTS) \
 MHDParams.o \
-InitialParams.o
+InitialParams.o \
+IniParams.o
 
 ALL_SOURCES = $(COMMON_SOURCES) \
 MHDParams.cpp \
-InitialParams.cpp
- 
+InitialParams.cpp \
+IniParams.cpp
+
+
 TOPLIB_INCLUDE = -I$(TOPLIB) -I$(FINESS)/apps/2d/mhd/lib/ $(LIB_SYS_INCLUDE)
 
 
 LOCAL_INCLUDE+=-I.
+
+
+
+
 ### targets ###
 
 include $(FINESS)/lib/2d/Makefile.targets
 
+IniParams.cpp: generate_iniparams.py
+	python $^
+
+IniParser.h: IniParser.rl
+	ragel $^ -o $@
+ 
 ### DO NOT remove this line - make depends on it ###
