--- a/apps/2d/mhd/rotated_shock_tube/parameters.ini
+++ b/apps/2d/mhd/rotated_shock_tube/parameters.ini
@@ -1,28 +1,27 @@
 ; Parameters common to dogpack applications
-[dogParams]
+[finess]
 ;defaults_file = "$FINESS/config/dogParams_defaults.ini"
 ndims       = 2         ; 1, 2, or 3
 nout        = 10         ; number of output times to print results
 tfinal      = 0.2	; final time
-dtv(1)      = 0.000008  ; initial dt
-dtv(2)      = 1.0e10    ; max allowable dt 
-cflv(1)     = 1.00      ; max allowable Courant number 1/(2k-1)
-cflv(2)     = 0.70      ; desired Courant number
+initial_dt      = 0.000008  ; initial dt
+max_dt      = 1.0e10    ; max allowable dt 
+max_cfl     = 1.00      ; max allowable Courant number 1/(2k-1)
+desired_cfl     = 0.70      ; desired Courant number
 nv          = 500000    ; max number of time steps per call to DogSolve
 time_stepping_method = Runge-Kutta ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
 ;time_stepping_method = Multiderivative ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
 ;limiter_method = moment ; (e.g., moment, viscosity)
 space_order = 5  ; =method(1)= order of accuracy in space
 time_order  = 4  ; =method(2)= order of accuracy in time
-use_limiter = 0  ; =method(3)= use limiter (1-yes, 0-no)
 verbosity   = 1  ; =method(4)= verbosity of output
 mcapa       = 0  ; =method(5)= mcapa (capacity function index in aux arrays)
 maux        = 0  ; =method(6)= maux (number of aux arrays, maux >= mcapa)
-source_term = 0  ; =method(7)= source term (1-yes, 0-no)
+source_term = false  ; =method(7)= source term (1-yes, 0-no)
 meqn        = 8  ; number of equations
-mrestart    = 0  ; restart from old data (1-yes, 0-no)
-nstart      = 0  ; if mrestart==1: from file q(nstart)_restart.dat
-datafmt     = 1  ; 1 for ascii, 5 for hdf5.
+;mrestart    = 0  ; restart from old data (1-yes, 0-no)
+;nstart      = 0  ; if mrestart==1: from file q(nstart)_restart.dat
+;datafmt     = 1  ; 1 for ascii, 5 for hdf5.
 [grid]
 mx    =  128   ; number of grid elements in x-direction
 my    =  128
@@ -31,12 +30,12 @@ xlow  = -1.0e0 ; left end point
 xhigh =  1.0e0 ; right end point
 ylow  = -1.0e0
 yhigh =  1.0e0
-[mhdparams]
+[mhd]
 gamma = 2   ; gamma (gas constant)
 ; -------------------------------------------------
 ;  Initial condition parameters
 ; -------------------------------------------------
-[initialparams]
+[initial]
 rhol  =  1.0   ; density (on left side of jump)
 unl   =  0.0   ; normal velocity (on left side of jump)
 utl   =  0.0   ; transverse velocity (on left side of jump)
