--- a/lib/sys/Makefile.defs
+++ b/lib/sys/Makefile.defs
@@ -14,6 +14,7 @@ LIB_SYS_OBJECTS = \
   $(LIB_SYS)/assert.o \
 #
 LIB_SYS_SOURCES = \
+  $(LIB_SYS)/util.h \
   $(LIB_SYS)/debug.h \
   $(LIB_SYS)/assert.h \
   $(LIB_SYS)/debug.cpp \
