--- a/apps/2d/mhd.backup/rotated_shock_tube/parameters.ini
+++ b/apps/2d/mhd.backup/rotated_shock_tube/parameters.ini
@@ -17,9 +17,9 @@ mcapa       = 0  ; =method(5)= mcapa (capacity function index in aux arrays)
 maux        = 0  ; =method(6)= maux (number of aux arrays, maux >= mcapa)
 source_term = false  ; =method(7)= source term (1-yes, 0-no)
 meqn        = 8  ; number of equations
-;;mrestart    = 0  ; restart from old data (1-yes, 0-no)
-;;;nstart      = 0  ; if ;mrestart==1: from file q(nstart)_restart.dat
-;;datafmt     = 1  ; 1 for ascii, 5 for hdf5.
+;mrestart    = 0  ; restart from old data (1-yes, 0-no)
+;;nstart      = 0  ; if ;mrestart==1: from file q(nstart)_restart.dat
+;datafmt     = 1  ; 1 for ascii, 5 for hdf5.
 [grid]
 mx    =  128   ; number of grid elements in x-direction
 my    =  128
@@ -28,12 +28,12 @@ xlow  = -1.0e0 ; left end point
 xhigh =  1.0e0 ; right end point
 ylow  = -1.0e0
 yhigh =  1.0e0
-[mhd]
+[mhdParams]
 gamma = 2   ; gamma (gas constant)
 ; -------------------------------------------------
 ;  Initial condition parameters
 ; -------------------------------------------------
-[initial]
+[initialparams]
 rhol  =  1.0   ; density (on left side of jump)
 unl   =  0.0   ; normal velocity (on left side of jump)
 utl   =  0.0   ; transverse velocity (on left side of jump)
@@ -57,7 +57,7 @@ Btr   = -1.0   ; transverse magnetic field (on left side of jump)
 B3r   =  0.0   ; z-magnetic field (on left side of jump)
 
 ;angle = 0.52359877559 ; pi/6
-;angle = 0.78539816339 ; pi/4
+ angle = 0.78539816339 ; pi/4
 ;angle = 1.57079632679 ; pi/2
-angle = 0
+;angle = 0
 ;ngle = 0.1
