--- a/apps/2d/euler/radial_shock/parameters.ini
+++ b/apps/2d/euler/radial_shock/parameters.ini
@@ -1,28 +1,24 @@
 ; Parameters common to dogpack applications
-[dogParams]
-defaults_file = "$FINESS/config/dogParams_defaults.ini"
+[finess]
 ndims       = 2         ; 1, 2, or 3
-mesh_type   = Cartesian ; (either Cartesian or Unstructured) 
 nout        = 10        ; number of output times to print results
 tfinal      = 0.85      ; final time
-dtv(1)      = 0.0001    ; initial dt
-dtv(2)      = 1.0e10    ; max allowable dt 
-cflv(1)     = 0.50      ; max allowable Courant number 1/(2k-1)
-cflv(2)     = 0.45      ; desired Courant number
+initial_dt      = 0.0001    ; initial dt
+max_dt      = 1.0e10    ; max allowable dt 
+max_cfl     = 0.50      ; max allowable Courant number 1/(2k-1)
+desired_cfl     = 0.45      ; desired Courant number
 nv          = 500000    ; max number of time steps per call to DogSolve
 time_stepping_method = Runge-Kutta ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
-limiter_method = moment ; (e.g., moment, viscosity)
 space_order = 5  ; =method(1)= order of accuracy in space
 time_order  = 3  ; =method(2)= order of accuracy in time
-use_limiter = 0  ; =method(3)= use limiter (1-yes, 0-no)
 verbosity   = 1  ; =method(4)= verbosity of output
 mcapa       = 0  ; =method(5)= mcapa (capacity function index in aux arrays)
 maux        = 0  ; =method(6)= maux (number of aux arrays, maux >= mcapa)
-source_term = 0  ; =method(7)= source term (1-yes, 0-no)
+source_term = false  ; =method(7)= source term (1-yes, 0-no)
 meqn        = 5  ; number of equations
-mrestart    = 0  ; restart from old data (1-yes, 0-no)
-nstart      = 0  ; if mrestart==1: from file q(nstart)_restart.dat
-datafmt     = 1  ; 1 for ascii, 5 for hdf5.
+;mrestart    = 0  ; restart from old data (1-yes, 0-no)
+;;nstart      = 0  ; if ;mrestart==1: from file q(nstart)_restart.dat
+;datafmt     = 1  ; 1 for ascii, 5 for hdf5.
 ic_quad_order = 20  ; order of quadrature for L2-projection of initial conditions
 ; -------------------------------------------------
 ;   Cartesian grid data (ignored if Unstructured)
