--- a/apps/2d/mhd/shock_tube/parameters.ini
+++ b/apps/2d/mhd/shock_tube/parameters.ini
@@ -2,7 +2,7 @@
 [finess]
 ndims       = 2         ; 1, 2, or 3
 nout        = 10         ; number of output times to print results
-tfinal      = 0.2	; final time
+tfinal      = 0.1	; final time
 initial_dt      = 0.000008  ; initial dt
 max_dt      = 1.0e10    ; max allowable dt 
 max_cfl     = 1.00      ; max allowable Courant number 1/(2k-1)
@@ -17,9 +17,9 @@ mcapa       = 0  ; =method(5)= mcapa (capacity function index in aux arrays)
 maux        = 0  ; =method(6)= maux (number of aux arrays, maux >= mcapa)
 source_term = false  ; =method(7)= source term (1-yes, 0-no)
 meqn        = 8  ; number of equations
-;;mrestart    = 0  ; restart from old data (1-yes, 0-no)
-;;;nstart      = 0  ; if ;mrestart==1: from file q(nstart)_restart.dat
-;;datafmt     = 1  ; 1 for ascii, 5 for hdf5.
+;mrestart    = 0  ; restart from old data (1-yes, 0-no)
+;;nstart      = 0  ; if ;mrestart==1: from file q(nstart)_restart.dat
+;datafmt     = 1  ; 1 for ascii, 5 for hdf5.
 [grid]
 mx    =  128   ; number of grid elements in x-direction
 my    =  128
@@ -28,36 +28,31 @@ xlow  = -1.0e0 ; left end point
 xhigh =  1.0e0 ; right end point
 ylow  = -1.0e0
 yhigh =  1.0e0
-[mhd]
-gamma = 2   ; gamma (gas constant)
+[mhdParams]
+gamma = 1.666666666666667     ; gamma (gas constant)
 ; -------------------------------------------------
 ;  Initial condition parameters
 ; -------------------------------------------------
-[initial]
+[initialparams]
 rhol  =  1.0   ; density (on left side of jump)
-unl   =  0.0   ; normal velocity (on left side of jump)
+unl   = -0.4   ; normal velocity (on left side of jump)
 utl   =  0.0   ; transverse velocity (on left side of jump)
 u3l   =  0.0   ; z-velocity (on left side of jump)
 pl    =  1.0   ; pressure (on left side of jump)
 Bnl   =  0.75  ; normal magnetic field (on left side of jump)
 Btl   =  1.0   ; transverse magnetic field (on left side of jump)
-;Bnl   =  0
-;Btl   =  0
 B3l   =  0.0   ; z-magnetic field (on left side of jump)
 ;
-rhor  =  0.125   ; density (on left side of jump)
-unr   =  0.0   ; normal velocity (on left side of jump)
+rhor  =  0.2   ; density (on left side of jump)
+unr   = -0.4   ; normal velocity (on left side of jump)
 utr   =  0.0   ; transverse velocity (on left side of jump)
 u3r   =  0.0   ; z-velocity (on left side of jump)
 pr    =  0.1   ; pressure (on left side of jump)
-Bnr   =  0.75   ; normal magnetic field (on left side of jump)
+Bnr   =  0.75  ; normal magnetic field (on left side of jump)
 Btr   = -1.0   ; transverse magnetic field (on left side of jump)
-;Bnr   = 0
-;Btr   = 0
 B3r   =  0.0   ; z-magnetic field (on left side of jump)
-
+;
 ;angle = 0.52359877559 ; pi/6
 ;angle = 0.78539816339 ; pi/4
-;angle = 1.57079632679 ; pi/2
-angle = 0
-;ngle = 0.1
+angle = 1.57079632679 ; pi/2
+ 
