Remove EulerParams from 2d euler apps.
- Add finess.params.euler Python module
- Add IniParams generation scripts to each of those apps;
- Current status of the apps:
   Doesn't compile:
    - mach_reflection. Due to dogParams.get_time() call;
   Blow up:
    - shock_diffraction;
    - test_exact2;
    - wind_tunnel_w_step

--- a/apps/2d/euler/mach_reflection/parameters.ini
+++ b/apps/2d/euler/mach_reflection/parameters.ini
@@ -34,6 +34,6 @@ yhigh = 1.0e0   ; upper end point
 ; -------------------------------------------------
 ;  Euler parameters
 ; -------------------------------------------------
-[eulerParams]
+[euler]
 gamma = 1.4     ; gas constant
 x0    = 0.1666666666666667     ; position of initial shock
