--- a/apps/2d/euler/radial_shock/parameters.ini
+++ b/apps/2d/euler/radial_shock/parameters.ini
@@ -34,5 +34,5 @@ yhigh =  1.0e0  ; upper end point
 ; -------------------------------------------------
 ;  Euler parameters
 ; -------------------------------------------------
-[eulerParams]
+[euler]
 gamma = 1.4     ; gas constant
