--- a/apps/2d/euler/riemann_test/parameters.ini
+++ b/apps/2d/euler/riemann_test/parameters.ini
@@ -34,6 +34,6 @@ yhigh =  1.0e0  ; upper end point
 ; -------------------------------------------------
 ;  Euler parameters
 ; -------------------------------------------------
-[eulerParams]
+[euler]
 gamma = 1.4     ; gas constant
 OPT   = 1       ; OPT=1 (x-aligned shock), OPT=2 (y-aligned shock)
