--- a/apps/2d/euler/shock_diffraction/parameters.ini
+++ b/apps/2d/euler/shock_diffraction/parameters.ini
@@ -41,7 +41,7 @@ yhigh = 11.0e0  ; upper end point
 ; -------------------------------------------------
 ;  Euler parameters
 ; -------------------------------------------------
-[eulerParams]
+[euler]
 gamma = 1.4     ; gas constant
 
 [weno]
