--- a/apps/2d/euler/test_exact1/parameters.ini
+++ b/apps/2d/euler/test_exact1/parameters.ini
@@ -2,7 +2,7 @@
 ; Parameters common to dogpack applications
 [finess]
 ndims       = 2          ; 1 or 2
-nout        = 1          ; number of output times to print results
+nout        = 10          ; number of output times to print results
 tfinal      = 2.0        ; final time
 initial_dt      = 1.0e0      ; initial dt
 max_dt      = 1.1e0      ; max allowable dt 
@@ -33,3 +33,5 @@ xhigh =   2.0e0  ; right end point
 ylow  =   0.0e0  ; lower end point
 yhigh =   2.0e0  ; upper end point
 
+[euler]
+gamma = 1.4
