--- a/apps/2d/euler/test_exact2/parameters.ini
+++ b/apps/2d/euler/test_exact2/parameters.ini
@@ -1,8 +1,8 @@
 ; Parameters common to dogpack applications
 [finess]
 ndims       = 2          ; 1 or 2
-nout        = 1          ; number of output times to print results
-tfinal      = 0.01        ; final time
+nout        = 10          ; number of output times to print results
+tfinal      = 0.1        ; final time
 initial_dt      = 0.01    ; initial dt
 max_dt      = 1.1e0      ; max allowable dt 
 max_cfl     = 0.35       ; max allowable Courant number
@@ -32,3 +32,5 @@ xhigh =  5.0e0  ; right end point
 ylow  = -5.0e0  ; lower end point
 yhigh =  5.0e0  ; upper end point
 
+[euler]
+gamma = 1.4
