--- a/apps/2d/euler/wind_tunnel_w_step/parameters.ini
+++ b/apps/2d/euler/wind_tunnel_w_step/parameters.ini
@@ -37,5 +37,5 @@ yhigh = 1.0e0   ; upper end point
 ; -------------------------------------------------
 ;  Euler parameters
 ; -------------------------------------------------
-[eulerParams]
+[euler]
 gamma = 1.4     ; gas constant
