--- a/apps/2d/shallow_water/riemann_test/Makefile
+++ b/apps/2d/shallow_water/riemann_test/Makefile
@@ -6,9 +6,12 @@ include $(FINESS)/lib/2d/Makefile.defs
 # Default (application level) definintions
 include $(FINESS)/apps/2d/shallow_water/lib/Makefile.defs
 
+## ------------------------------------------------------------------------- ##
 # overridden library objects
 #
-#Output               = Output
+#Output                 = Output
+DogSolveUser            = $(FINESS)/lib/2d/FinSolveRK_PIF
+## ------------------------------------------------------------------------- ##
 
 # place to add object modules
 #
