--- a/apps/1d/euler/harten_shock_tube/Makefile
+++ b/apps/1d/euler/harten_shock_tube/Makefile
@@ -8,7 +8,8 @@ include $(FINESS)/apps/1d/euler/lib/Makefile.defs
 
 # overridden library objects
 #
-InitApp    =  InitApp
+InitApp                 =  InitApp
+DogSolveUser            = $(FINESS)/lib/1d/FinSolveRK_PIF
 
 # place to add object modules
 #
