--- a/apps/1d/advection/smooth_example/parameters.ini
+++ b/apps/1d/advection/smooth_example/parameters.ini
@@ -14,7 +14,7 @@ time_order  = 3   ; order of accuracy in time
 verbosity   = 1   ; verbosity of output
 mcapa       = 0   ; mcapa (capacity function index in aux arrays)
 maux        = 1   ; maux (number of aux arrays, maux >= mcapa)
-source_term = false   ; source term (true, false)
+source_term = false   ; source term (true or false)
 meqn        = 1   ; number of equations
 
 [grid]
