--- a/lib/2d/Makefile.defs
+++ b/lib/2d/Makefile.defs
@@ -93,7 +93,7 @@ AfterFullTimeStep    = $(LIB2D)/AfterFullTimeStep
 FinSolveRK           = $(LIB2D)/FinSolveRK
 FinSolveLxW          = $(LIB2D)/FinSolveLxW
 FinSolveMD           = $(LIB2D)/FinSolveMD
-DogSolveUser         = $(LIB2D)/DogSolveUser
+FinSolveUser         = $(LIB2D)/FinSolveUser
 GridSetup            = $(LIB2D)/GridSetup
 SampleFunction       = $(LIB2D)/SampleFunction
 GlobalWaveSpd        = $(LIB2D)/GlobalWaveSpd
@@ -101,12 +101,6 @@ GlobalWaveSpd        = $(LIB2D)/GlobalWaveSpd
 # Routines needed for Lax-Wendroff (and multiderivative) time stepping:
 DFluxFunc            = $(LIB2D)/LaxWendroff/DFluxFunc
 D2FluxFunc           = $(LIB2D)/LaxWendroff/D2FluxFunc
-
-# TODO - these should be added in at a later time (-DS)
-#DogSolveLxW          = $(LIB2D)/DogSolveLxW
-#LaxWendroff          = $(LIB2D)/LaxWendroff/LaxWendroff
-#LaxWendroffTD        = $(LIB2D)/LaxWendroff/LaxWendroffTD
-#RiemannSolveLxW      = $(LIB2D)/LaxWendroff/RiemannSolveLxW_LLF
 
 LIB2D_OBJECTS = \
   $(TOPLIB_OBJECTS) \
@@ -122,7 +116,7 @@ LIB2D_OBJECTS = \
   $(LIB2D)/GetCFL.o \
   $(GlobalWaveSpd).o \
   $(AfterQinit).o \
-  $(DogSolveUser).o \
+  $(FinSolveUser).o \
   $(BeforeFullTimeStep).o \
   $(BeforeStep).o \
   $(AfterStep).o \
@@ -149,7 +143,7 @@ LIB2D_SOURCES = \
   $(LIB2D)/GetCFL.cpp \
   $(GlobalWaveSpd).cpp \
   $(AfterQinit).cpp \
-  $(DogSolveUser).cpp \
+  $(FinSolveUser).cpp \
   $(BeforeFullTimeStep).cpp \
   $(BeforeStep).cpp \
   $(AfterStep).cpp \
