Major revisions for 1D code.
* Started to import StateVars into 1D library routines.  Currently, not many
functions use the new format, however ConSoln, Output and UpdateSoln do.

* I have only tried compiling and running one example:
  $FINESS/apps/1d/advection/smooth_example.  I do not know if this is
  computing junk or not.

--- a/apps/1d/advection/smooth_example/Makefile
+++ b/apps/1d/advection/smooth_example/Makefile
@@ -10,7 +10,7 @@ include $(FINESS)/apps/1d/advection/lib/Makefile.defs
 #
 # overridden library objects
 #
-DogSolveUser           = $(FINESS)/lib/1d/FinSolveRK_PIF
+FinSolveUser           = $(FINESS)/lib/1d/FinSolveRK_PIF
 ConstructIntegratedF   = ConstructIntegratedF
 
 # place to add object modules
