Remove InitialParams, EulerParams, MHDParams from 1D code.

--- a/apps/1d/advection/smooth_example/parameters.ini
+++ b/apps/1d/advection/smooth_example/parameters.ini
@@ -5,7 +5,7 @@ nout        = 10         ; number of output times to print results
 tfinal      = 1.00       ; final time
 initial_dt  = 1.00e-03   ; initial dt
 max_dt      = 1.0e4      ; max allowable dt 
-max_cfl     = 0.44       ; max allowable Courant number
+desired_cfl     = 0.44       ; max allowable Courant number
 desired_cfl = 0.40       ; desired Courant number
 nv          = 500000     ; max number of time steps per call to DogSolve
 time_stepping_method = Runge-Kutta ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
