--- a/apps/1d/buckley_lev/sq_wave/parameters.ini
+++ b/apps/1d/buckley_lev/sq_wave/parameters.ini
@@ -5,7 +5,7 @@ nout        = 1          ; number of output times to print results
 tfinal      = 0.200000   ; final time
 initial_dt  = 1.00       ; initial dt
 max_dt      = 1.0e4      ; max allowable dt 
-max_cfl     = 1.00       ; max allowable Courant number
+desired_cfl     = 1.00       ; max allowable Courant number
 desired_cfl = 0.60       ; desired Courant number
 nv          = 500000     ; max number of time steps per call to DogSolve
 time_stepping_method = Lax-Wendroff ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
