fixing a handful of parameters.ini files that do not have max_cfl

--- a/apps/1d/advection/c0deriv/parameters.ini
+++ b/apps/1d/advection/c0deriv/parameters.ini
@@ -2,10 +2,10 @@
 [finess]
 ndims       = 1          ; 1, 2, or 3
 nout        = 10         ; number of output times to print results
-tfinal      = 4.0           ; final time
+tfinal      = 4.0        ; final time
 initial_dt  = 1.00e-03   ; initial dt
 max_dt      = 1.0e4      ; max allowable dt 
-desired_cfl     = 1.10       ; max allowable Courant number
+max_cfl     = 1.10       ; max allowable Courant number
 desired_cfl = 1.00       ; desired Courant number
 nv          = 500000     ; max number of time steps per call to DogSolve
 time_stepping_method = Runge-Kutta ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
