--- a/apps/1d/burgers/sine_to_n/parameters.ini
+++ b/apps/1d/burgers/sine_to_n/parameters.ini
@@ -5,7 +5,7 @@ nout        = 10        ; number of output times to print results
 tfinal      = 1.591549430918953e-01 ; final time 
 initial_dt  = 1.00e-03   ; initial dt
 max_dt      = 1.0e10     ; max allowable dt 
-desired_cfl     = 0.84       ; max allowable Courant number
+max_cfl     = 0.84       ; max allowable Courant number
 desired_cfl = 0.50       ; desired Courant number
 nv          = 500000    ; max number of time steps per call to DogSolve
 time_stepping_method = Runge-Kutta ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
