--- a/apps/1d/advection/sq_wave/parameters.ini
+++ b/apps/1d/advection/sq_wave/parameters.ini
@@ -3,10 +3,9 @@
 ndims       = 1          ; 1, 2, or 3
 nout        = 10         ; number of output times to print results
 tfinal      = 2.0        ; final time
-
 initial_dt  = 1.00e-03   ; initial dt
 max_dt      = 1.0e4      ; max allowable dt 
-desired_cfl     = 1.00       ; max allowable Courant number
+max_cfl     = 1.00       ; max allowable Courant number
 desired_cfl = 0.20       ; desired Courant number
 nv          = 500000     ; max number of time steps per call to DogSolve
 time_stepping_method = Lax-Wendroff ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
