--- a/apps/1d/euler/harten_shock_tube/parameters.ini
+++ b/apps/1d/euler/harten_shock_tube/parameters.ini
@@ -1,4 +1,8 @@
 ; Parameters common to FINESS applications
+[finess]
+ndims       = 1         ; 1, 2, or 3
+nout        = 10        ; number of output times to print results
+tfinal      = 0.16      ; final time
 initial_dt  = 0.0005    ; initial dt
 max_dt      = 1.0e10    ; max allowable dt 
 max_cfl     = 0.90      ; max allowable Courant number
