--- a/apps/1d/euler/test_exact/parameters.ini
+++ b/apps/1d/euler/test_exact/parameters.ini
@@ -1,4 +1,8 @@
 ; Parameters common to FINESS applications
+[finess]
+ndims       = 1         ; 1, 2, or 3
+nout        = 2         ; number of output times to print results
+tfinal      = 2.0       ; final time
 initial_dt  = 0.0005    ; initial dt
 max_dt      = 1.0e10    ; max allowable dt 
 max_cfl     = 0.45      ; max allowable Courant number
