Fix 1D compilation errors.
- Remove old params mechanism from mhd apps
- Fix SetBndValues in some apps
- Fix Output function.

--- a/apps/1d/mhd/shock_tube/Makefile
+++ b/apps/1d/mhd/shock_tube/Makefile
@@ -10,13 +10,9 @@ InitApp     =  InitApp
 
 # place to add object modules
 #
-ALL_OBJECTS = $(COMMON_OBJECTS) \
-MHDParams.o \
-InitialParams.o \
+ALL_OBJECTS = $(COMMON_OBJECTS)
 
-ALL_SOURCES = $(COMMON_SOURCES) \
-MHDParams.cpp \
-InitialParams.cpp \
+ALL_SOURCES = $(COMMON_SOURCES) 
 
 ### targets ###
 
