Remove InitApp completely.

--- a/apps/2d/advection/smooth_example/Makefile
+++ b/apps/2d/advection/smooth_example/Makefile
@@ -16,10 +16,13 @@ DogSolveUser            = $(FINESS)/lib/2d/FinSolveRK_PIF
 ## ------------------------------------------------------------------------- ##
 
 ALL_OBJECTS = \
-$(COMMON_OBJECTS) \
+$(COMMON_OBJECTS) 
 
 ALL_SOURCES = \
-$(COMMON_SOURCES) \
+$(COMMON_SOURCES)
+
+
+LOCAL_INCLUDE+=-I.
 
 ### targets ###
 
