--- a/apps/2d/advection/sine_example/parameters.ini
+++ b/apps/2d/advection/sine_example/parameters.ini
@@ -1,15 +1,14 @@
-; Parameters common to dogpack applications
+; Parameters common to FINESS applications
 [finess]
 ndims       = 2          ; 1 or 2
-nout        = 100          ; number of output times to print results
+nout        = 10         ; number of output times to print results
 tfinal      = 1.00       ; final time
-initial_dt      = 1.375000e-02     ; initial dt
-max_dt      = 1.0e0      ; max allowable dt 
+initial_dt  = 1.0e0      ; initial dt
+max_dt      = 1.0e3      ; max allowable dt 
 max_cfl     = 0.4        ; max allowable Courant number
-desired_cfl     = 0.35      ; desired Courant number
+desired_cfl = 0.35       ; desired Courant number
 nv          = 500000     ; max number of time steps per call to DogSolve
-;time_stepping_method = Runge-Kutta; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
-time_stepping_method = Lax-Wendroff ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
+time_stepping_method = Runge-Kutta; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
 space_order = 5   ; =method(1)= order of accuracy in space
 time_order  = 3   ; =method(2)= order of accuracy in time
 verbosity   = 1   ; =method(4)= verbosity of output
@@ -17,9 +16,8 @@ mcapa       = 0   ; =method(5)= mcapa (capacity function index in aux arrays)
 maux        = 2   ; =method(6)= maux (number of aux arrays, maux >= mcapa)
 source_term = false   ; =method(7)= source term (1-yes, 0-no)
 meqn        = 1   ; number of equations
-;mrestart    = 0   ; restart from old data (1-yes, 0-no)
-;;nstart      = 0   ; if ;mrestart==1: from file q(nstart)_restart.dat
-;datafmt     = 1   ; 1 for ascii, 5 for hdf5.
+output_dir  = output    ; location of the output directory
+
 ; -------------------------------------------------
 ;   Cartesian grid data (ignored if Unstructured)
 ; -------------------------------------------------
@@ -31,4 +29,12 @@ xlow  =   0.0e0  ; left end point
 xhigh =   1.0e0  ; right end point
 ylow  =   0.0e0  ; lower end point
 yhigh =   1.0e0  ; upper end point
+
+; -------------------------------------------------
+;   WENO values
+; -------------------------------------------------
+[weno]
+weno_version  = JS     ; type of WENO reconstruction (e.g. JS, FD, Z)
+epsilon       = 1e-29  ; regulization parameter  ( epsilon > 0.0        )
+alpha_scaling = 1.1    ; scaling parameter       ( alpha_scaling >= 1.0 )
 
