--- a/apps/2d/euler/radial_shock/Makefile
+++ b/apps/2d/euler/radial_shock/Makefile
@@ -10,7 +10,7 @@ include $(FINESS)/apps/2d/euler/lib/Makefile.defs
 # overridden library objects
 #
 #EulerParams = EulerParams
-DogSolveUser            = $(FINESS)/lib/2d/FinSolveRK_PIF
+FinSolveUser            = $(FINESS)/lib/2d/FinSolveRK_PIF
 ## ------------------------------------------------------------------------- ##
 
 # place to add object modules
