more work on 2D code.  RK solver should be operable

--- a/apps/2d/advection/smooth_example/parameters.ini
+++ b/apps/2d/advection/smooth_example/parameters.ini
@@ -1,28 +1,30 @@
+
 ; Parameters common to FINESS applications
 [finess]
 ndims       = 2          ; 1, 2, or 3
-nout        = 10         ; number of output times to print results
+nout        = 1          ; number of output times to print results
 tfinal      = 1.0        ; final time
-initial_dt  = 1.00e-03   ; initial dt
+initial_dt  = 1.0        ; initial dt
 max_dt      = 1.0e10     ; max allowable dt 
 max_cfl     = 1.00       ; max allowable Courant number
-desired_cfl = 0.40       ; desired Courant number
+desired_cfl = 0.800000    ; desired Courant number
 nv          = 500000     ; max number of time steps per call to DogSolve
-time_stepping_method = Runge-Kutta ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
-space_order = 5   ; =method(1)= order of accuracy in space
-time_order  = 3   ; =method(2)= order of accuracy in time
+time_stepping_method = Runge-Kutta ; (e.g., Runge-Kutta, Lax-Wendroff, Multiderivative, User-Defined)
+space_order = 5   ; order of accuracy in space
+time_order  = 3   ; order of accuracy in time
 verbosity   = 1   ; =method(4)= verbosity of output
 mcapa       = 0   ; =method(5)= mcapa (capacity function index in aux arrays)
 maux        = 2   ; =method(6)= maux (number of aux arrays, maux >= mcapa)
 source_term = false   ; =method(7)= source term (1-yes, 0-no)
 meqn        = 1   ; number of equations
+output_dir  = output_002 ; location of the output directory
 
 ; -------------------------------------------------
-; Cartesian grid data
+;   Cartesian grid data (ignored if Unstructured)
 ; -------------------------------------------------
 [grid]
-mx    =  30      ; number of grid elements in x-direction
-my    =  30      ; number of grid elements in y-direction
+mx    =  40  ; number of grid elements in x-direction
+my    =  40  ; number of grid elements in y-direction
 mbc   =   5      ; number of ghost cells on each boundary
 xlow  =   0.0e0  ; left end point
 xhigh =   1.0e0  ; right end point
