--- a/apps/2d/advection/rotating/parameters.ini
+++ b/apps/2d/advection/rotating/parameters.ini
@@ -1,34 +1,41 @@
-
-; Parameters common to dogpack applications
+; Parameters common to FINESS applications
 [finess]
 ndims       = 2          ; 1, 2, or 3
-nout        = 10         ; number of output times to print results
-tfinal      = 1.00       ; final time
-initial_dt      = 1.00e-03   ; initial dt
+nout        = 1          ; number of output times to print results
+tfinal      = 1.0        ; final time
+initial_dt  = 1.0        ; initial dt
 max_dt      = 1.0e10     ; max allowable dt 
 max_cfl     = 1.00       ; max allowable Courant number
-desired_cfl     = 0.95       ; desired Courant number
+desired_cfl = 0.400000    ; desired Courant number
 nv          = 500000     ; max number of time steps per call to DogSolve
-time_stepping_method = Runge-Kutta ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
-space_order = 5   ; =method(1)= order of accuracy in space
-time_order  = 3   ; =method(2)= order of accuracy in time
-verbosity   = 1   ; =method(4)= verbosity of output
-mcapa       = 0   ; =method(5)= mcapa (capacity function index in aux arrays)
-maux        = 3   ; =method(6)= maux (number of aux arrays, maux >= mcapa)
-source_term = false   ; =method(7)= source term (1-yes, 0-no)
+;time_stepping_method = Runge-Kutta ; (e.g., Runge-Kutta, Lax-Wendroff, Multiderivative, User-Defined)
+time_stepping_method = Lax-Wendroff ; (e.g., Runge-Kutta, Lax-Wendroff, Multiderivative, User-Defined)
+space_order = 5   ; order of accuracy in space
+time_order  = 3   ; order of accuracy in time
+verbosity   = 1   ; verbosity of output
+mcapa       = 0   ; mcapa (capacity function index in aux arrays)
+maux        = 3   ; maux (number of aux arrays, maux >= mcapa)
+source_term = false   ; source term (true or false)
 meqn        = 1   ; number of equations
-;mrestart    = 0   ; restart from old data (1-yes, 0-no)
-;;nstart      = 0   ; if ;mrestart==1: from file q(nstart)_restart.dat
-;datafmt     = 1   ; 1 for ascii, 5 for hdf5.
+output_dir  = output ; location of the output directory
+
 ; -------------------------------------------------
 ;   Cartesian grid data (ignored if Unstructured)
 ; -------------------------------------------------
 [grid]
-mx    =  30      ; number of grid elements in x-direction
-my    =  30      ; number of grid elements in y-direction
-mbc   =   3      ; number of ghost cells on each boundary
+mx    =  20  ; number of grid elements in x-direction
+my    =  20  ; number of grid elements in y-direction
+mbc   =   5      ; number of ghost cells on each boundary
 xlow  =   0.0e0  ; left end point
 xhigh =   1.0e0  ; right end point
 ylow  =   0.0e0  ; lower end point
 yhigh =   1.0e0  ; upper end point
+
+; -------------------------------------------------
+;   WENO values
+; -------------------------------------------------
+[weno]
+weno_version  = JS     ; type of WENO reconstruction (e.g. JS, FD, Z)
+epsilon       = 1e-29  ; regulization parameter  ( epsilon > 0.0        )
+alpha_scaling = 1.1    ; scaling parameter       ( alpha_scaling >= 1.0 )
 
