More work on 2D lib.
* ConstructL now takes in const reference to Q.
* Working solvers should now be RK and LxW only.

--- a/apps/2d/advection/smooth_example/parameters.ini
+++ b/apps/2d/advection/smooth_example/parameters.ini
@@ -1,4 +1,3 @@
-
 ; Parameters common to FINESS applications
 [finess]
 ndims       = 2          ; 1, 2, or 3
@@ -12,12 +11,12 @@ nv          = 500000     ; max number of time steps per call to DogSolve
 time_stepping_method = Runge-Kutta ; (e.g., Runge-Kutta, Lax-Wendroff, Multiderivative, User-Defined)
 space_order = 5   ; order of accuracy in space
 time_order  = 3   ; order of accuracy in time
-verbosity   = 1   ; =method(4)= verbosity of output
-mcapa       = 0   ; =method(5)= mcapa (capacity function index in aux arrays)
-maux        = 2   ; =method(6)= maux (number of aux arrays, maux >= mcapa)
-source_term = false   ; =method(7)= source term (1-yes, 0-no)
+verbosity   = 1   ; verbosity of output
+mcapa       = 0   ; mcapa (capacity function index in aux arrays)
+maux        = 2   ; maux (number of aux arrays, maux >= mcapa)
+source_term = false   ; source term (1-yes, 0-no)
 meqn        = 1   ; number of equations
-output_dir  = output_002 ; location of the output directory
+output_dir  = output ; location of the output directory
 
 ; -------------------------------------------------
 ;   Cartesian grid data (ignored if Unstructured)
