--- a/apps/2d/advection/rotating/parameters.ini
+++ b/apps/2d/advection/rotating/parameters.ini
@@ -8,7 +8,8 @@ max_dt      = 1.0e10     ; max allowable dt
 max_cfl     = 1.00       ; max allowable Courant number
 desired_cfl = 0.400000    ; desired Courant number
 nv          = 500000     ; max number of time steps per call to DogSolve
-time_stepping_method = Lax-Wendroff ; (e.g., Runge-Kutta, Lax-Wendroff, Multiderivative, User-Defined)
+;time_stepping_method = Lax-Wendroff ; (e.g., Runge-Kutta, Lax-Wendroff, Multiderivative, User-Defined)
+time_stepping_method = Runge-Kutta ; (e.g., Runge-Kutta, Lax-Wendroff, Multiderivative, User-Defined)
 space_order = 5   ; order of accuracy in space
 time_order  = 3   ; order of accuracy in time
 verbosity   = 1   ; verbosity of output
